--- a/febs-auth/pom.xml
+++ b/febs-auth/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-cloud</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../febs-cloud/pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>febs-auth</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <name>FEBS-Auth</name>
     <description>FEBS-Cloud认证服务器</description>
 
