--- a/febs-canal/pom.xml
+++ b/febs-canal/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>febs-cloud</artifactId>
         <groupId>com.cxf</groupId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../febs-cloud/pom.xml</relativePath>
     </parent>
 
     <artifactId>febs-canal</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <name>febs-Canal</name>
     <description>febs-Canal同步增量数据</description>
 
