--- a/febs-cloud/pom.xml
+++ b/febs-cloud/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cxf</groupId>
     <artifactId>febs-cloud</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <packaging>pom</packaging>
 
     <name>FEBS-Cloud</name>
