--- a/febs-common/febs-common-core/pom.xml
+++ b/febs-common/febs-common-core/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-common</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cxf</groupId>
     <artifactId>febs-common-core</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <name>febs-common-core</name>
     <description>Demo project for Spring Boot</description>
 
