--- a/febs-common/febs-common-doc-gateway-starter/pom.xml
+++ b/febs-common/febs-common-doc-gateway-starter/pom.xml
@@ -5,23 +5,24 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-common-doc</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>febs-common-doc-gateway-starter</artifactId>
     <name>febs-common-doc-gateway-starter</name>
+    <version>2.1-RELEASE</version>
     <description>Febs-Common-Doc-Gateway-Starter文档网关聚合模块</description>
 
     <properties>
-        <febs-cloud.version>2.2-RELEASE</febs-cloud.version>
+        <febs-cloud.version>2.1-RELEASE</febs-cloud.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-doc</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
         </dependency>
 
         <dependency>
