--- a/febs-common/febs-common-doc-starter/pom.xml
+++ b/febs-common/febs-common-doc-starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-common</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
@@ -15,14 +15,14 @@
     <packaging>jar</packaging>
 
     <properties>
-        <febs-cloud.version>2.2-RELEASE</febs-cloud.version>
+        <febs-cloud.version>2.1-RELEASE</febs-cloud.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-doc</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
