--- a/febs-common/febs-common-doc/pom.xml
+++ b/febs-common/febs-common-doc/pom.xml
@@ -5,12 +5,13 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-common</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>febs-common-doc</artifactId>
     <name>febs-common-doc</name>
+    <version>2.1-RELEASE</version>
     <description>Febs-Common-Doc febs通用文档配置</description>
     <packaging>jar</packaging>
 
