--- a/febs-common/febs-common-security-starter/pom.xml
+++ b/febs-common/febs-common-security-starter/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-common</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>febs-common-security-starter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <name>febs-common-security-starter</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-core</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
