--- a/febs-common/pom.xml
+++ b/febs-common/pom.xml
@@ -6,13 +6,13 @@
 
     <parent>
         <groupId>com.cxf</groupId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <artifactId>febs-cloud</artifactId>
         <relativePath>../febs-cloud/pom.xml</relativePath>
     </parent>
 
     <artifactId>febs-common</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <name>FEBS-Common</name>
     <packaging>pom</packaging>
     <description>FEBS-Common通用模块</description>
