--- a/febs-monitor/pom.xml
+++ b/febs-monitor/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>febs-cloud</artifactId>
         <groupId>com.cxf</groupId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../febs-cloud/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>febs-monitor</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <packaging>pom</packaging>
     <name>FEBS-Monitor</name>
     <description>FEBS-Monitor监控模块</description>
