--- a/febs-server/febs-server-system/pom.xml
+++ b/febs-server/febs-server-system/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.cxf</groupId>
         <artifactId>febs-server</artifactId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>febs-server-system</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <name>FEBS-Server-System</name>
     <description>FEBS-Server-System微服务系统模块</description>
 
