--- a/febs-server/pom.xml
+++ b/febs-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>febs-cloud</artifactId>
         <groupId>com.cxf</groupId>
-        <version>1.3-SNAPSHOT</version>
+        <version>2.1-RELEASE</version>
         <relativePath>../febs-cloud/pom.xml</relativePath>
     </parent>
 
@@ -16,7 +16,7 @@
     </modules>
 
     <artifactId>febs-server</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>2.1-RELEASE</version>
     <packaging>pom</packaging>
     <name>FEBS-Server</name>
     <description>FEBS-Server服务提供模块</description>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.cxf</groupId>
             <artifactId>febs-common-core</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>2.1-RELEASE</version>
         </dependency>
 
         <dependency>
